--- a/contacto.html
+++ b/contacto.html
@@ -34,7 +34,7 @@
                 <li class="nav-item"><a class="nav-link" href="./about.html">Nosotros</a></li>
                 <li class="nav-item"><a class="nav-link" href="./precios.html">Precios</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Términos</a></li>
-                <li class="nav-item active"><a class="nav-link" href="./contacto.html">Contactos</a></li>
+                <li class="nav-item active"><a class="nav-link" href="#">Contactos</a></li>
             </ul>
         </div>
     </nav>
@@ -98,38 +98,37 @@
                     </div>
                     <div class="form-group">
                         <div class="form-check">
-                            <input </div>
-
-                            <footer>
-                                <div class="row">
-                                    <div class="col-sm-4 d-flex flex-column">
-                                        <a href="http://www.facebook.com">facebook</a>
-                                        <a href="http://www.twitter.com">twitter</a>
-                                        <a href="http://www.instagram.com">instagram</a>
-                                        <a href="http://www.google.com.ec">google</a> </div>
-                                    <div class="col-sm-4">
-                                        <address>
-                                            <h3>Oficina Central</h3>
-                                            <p><span class="oi oi-home footer-address-icon"> Loja 896, Daniel Álvarez,
-                                                    Ecuador</span></p>
-                                            <p><span class="oi oi-phone footer-address-icon"> +593984932358</span></p>
-                                            <p><span class="oi oi-inbox footer-address-icon">
-                                                    rene525456@gmail.com</span></p>
-                                        </address>
-                                    </div>
-                                    <div class="col-sm-4 d-flex flex-column align-items-end">
-                                        <a href="http://www.facebook.com">Nosotros</a>
-                                        <a href="http://www.twitter.com">Precios</a>
-                                        <a href="http://www.instagram.com">Términos y Condiciones</a>
-                                        <a href="http://www.google.com.ec">Contactos</a>
-                                    </div>
-                                </div>
-                            </footer>
-                        </div>
+                            
+                        </div>  
                     </div>
                 </div>
+            </div>
         </form>
     </div>
+
+    <footer>
+        <div class="row">
+            <div class="col-sm-4 d-flex flex-column">
+                <a href="http://www.facebook.com">facebook</a>
+                <a href="http://www.twitter.com">twitter</a>
+                <a href="http://www.instagram.com">instagram</a>
+                <a href="http://www.google.com.ec">google</a> </div>
+            <div class="col-sm-4">
+                <address>
+                    <h3>Oficina Central</h3>
+                    <p><span class="oi oi-home footer-address-icon"> Loja 896, Daniel Álvarez, Ecuador</span></p>
+                    <p><span class="oi oi-phone footer-address-icon"> +593984932358</span></p>
+                    <p><span class="oi oi-inbox footer-address-icon"> rene525456@gmail.com</span></p>
+                </address>
+            </div>
+            <div class="col-sm-4 d-flex flex-column align-items-end">
+                <a href="http://www.facebook.com">Nosotros</a>
+                <a href="http://www.twitter.com">Precios</a>
+                <a href="http://www.instagram.com">Términos y Condiciones</a>
+                <a href="http://www.google.com.ec">Contactos</a>
+            </div>
+        </div>
+    </footer>
 </body>
 
 
