--- a/precios.html
+++ b/precios.html
@@ -211,8 +211,9 @@
                 <address>
                     <h3>Oficina Central</h3>
                     <p><span class="oi oi-home footer-address-icon"> Loja 896, Daniel Álvarez, Ecuador</span></p>
-                    <p><span class="oi oi-phone footer-address-icon"> +593984932358</span></p>
-                    <p><span class="oi oi-inbox footer-address-icon"> rene525456@gmail.com</span></p>
+                    <p><span class="oi oi-home footer-address-icon"> Beiker Santorum</span></p>
+                    <p><span class="oi oi-phone footer-address-icon"> +593986005899</span></p>
+                    <p><span class="oi oi-inbox footer-address-icon"> beiker.santorum@unl.edu.ec</span></p>
                 </address>
             </div>
             <div class="col-sm-4 d-flex flex-column align-items-end">
